objects/AOPS_Address_Master__c.object
<CustomObject>
    <fields>
        <fullName>CXTF001P_ACTION__c</fullName>
        <label>CXTF001P_ACTION</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTF001P_AOPS_KEY1__c</fullName>
        <label>AOPS KEY1 Account/Prospect</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTF001P_AOPS_KEY2__c</fullName>
        <label>AOPS KEY2 Address/Contact</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTF001P_CONTRAT_RETAIL__c</fullName>
        <label>CXTF001P_CONTRAT_RETAIL</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTF001P_COUNTY__c</fullName>
        <label>CXTF001P_COUNTY</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTF001P_EXT_CUSTOMER__c</fullName>
        <label>CXTF001P_EXT_CUSTOMER</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTF001P_INDIRECT_FLAG__c</fullName>
        <label>CXTF001P_INDIRECT_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTF001P_MSG_TYPE__c</fullName>
        <label>Message Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTF001P_ORDER_LOCATION__c</fullName>
        <label>CXTF001P_ORDER_LOCATION</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTF001P_SALES_REP_ID__c</fullName>
        <label>CXTF001P_SALES_REP_ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTF001P_SFDC_KEY1__c</fullName>
        <label>CXTF001P SFDC KEY1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTF001P_SFDC_KEY2__c</fullName>
        <label>CXTF001P SFDC KEY2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTF001P_TIMESTAMP__c</fullName>
        <label>CXTF001P_TIMESTAMP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_ADDL_PHONE_CONT_IND__c</fullName>
        <label>FCU001P_ADDL_PHONE_CONT_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_ADDRESS_KEY__c</fullName>
        <label>FCU001P_ADDRESS_KEY</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_ADDRESS_SEQ__c</fullName>
        <label>FCU001P_ADDRESS_SEQ</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_ADDR_CNG_DATE__c</fullName>
        <label>FCU001P_ADDR_CNG_DATE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_ADDR_CNG_HYGIENE__c</fullName>
        <label>FCU001P_ADDR_CNG_HYGIENE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_ADDR_COMM_IND__c</fullName>
        <label>FCU001P_ADDR_COMM_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_ADDR_ERROR_CODE__c</fullName>
        <label>FCU001P_ADDR_ERROR_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_ADDR_HOURS_IND__c</fullName>
        <label>FCU001P_ADDR_HOURS_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_ADDR_OVERRIDDEN__c</fullName>
        <label>FCU001P_ADDR_OVERRIDDEN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_ADDR_VALID_DATE__c</fullName>
        <label>FCU001P_ADDR_VALID_DATE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_BILL_TO_YN__c</fullName>
        <label>FCU001P_BILL_TO_YN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_BRAND__c</fullName>
        <label>FCU001P_BRAND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_BUSINESS_NAME__c</fullName>
        <label>FCU001P_BUSINESS_NAME</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_CHANGED_APPLICATION__c</fullName>
        <label>FCU001P_CHANGED_APPLICATION</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_CHANGED_CLIENT__c</fullName>
        <label>FCU001P_CHANGED_CLIENT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_CITY__c</fullName>
        <label>FCU001P_CITY</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_COUNTRY_CODE__c</fullName>
        <label>FCU001P_COUNTRY_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_CREATED_APPLICATION__c</fullName>
        <label>FCU001P_CREATED_APPLICATION</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_CREATED_CLIENT__c</fullName>
        <label>FCU001P_CREATED_CLIENT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_CREATE_DATE__c</fullName>
        <label>FCU001P_CREATE_DATE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_CREATE_ID__c</fullName>
        <label>FCU001P_CREATE_ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_CUSTOMER_ID__c</fullName>
        <label>FCU001P_CUSTOMER_ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_DATE_STS_MOD__c</fullName>
        <label>FCU001P_DATE_STS_MOD</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_DLV_POINT_CODE__c</fullName>
        <label>FCU001P_DLV_POINT_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_DUNS_NBR__c</fullName>
        <label>FCU001P_DUNS_NBR</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_GEO_CODE__c</fullName>
        <label>FCU001P_GEO_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_GP1_VALIDATED__c</fullName>
        <label>FCU001P_GP1_VALIDATED</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_HYGIENE_CNG_STATUS__c</fullName>
        <label>FCU001P_HYGIENE_CNG_STATUS</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_MAIL_FLAG__c</fullName>
        <label>FCU001P_MAIL_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_MAIL_TO_YN__c</fullName>
        <label>FCU001P_MAIL_TO_YN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_NAME_CNG_DATE__c</fullName>
        <label>FCU001P_NAME_CNG_DATE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_OUTSIDE_CITY_FLAG__c</fullName>
        <label>FCU001P_OUTSIDE_CITY_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_OVERRIDE_ROUTE__c</fullName>
        <label>FCU001P_OVERRIDE_ROUTE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_PHONE_CONT_SEQ__c</fullName>
        <label>FCU001P_PHONE_CONT_SEQ</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_PO_BOX_FLAG__c</fullName>
        <label>FCU001P_PO_BOX_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_PROVINCE__c</fullName>
        <label>FCU001P_PROVINCE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_PST_TAX_EXEMPT_FLAG__c</fullName>
        <label>FCU001P_PST_TAX_EXEMPT_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_RDI__c</fullName>
        <label>FCU001P_RDI</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_RESERVED_SPACE__c</fullName>
        <label>FCU001P_RESERVED_SPACE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_ROUTING_FLAG__c</fullName>
        <label>FCU001P_ROUTING_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_RSV_10CHAR__c</fullName>
        <label>FCU001P_RSV_10CHAR</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_RSV_10V2__c</fullName>
        <label>FCU001P_RSV_10V2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_RSV_1CHAR_1__c</fullName>
        <label>FCU001P_RSV_1CHAR_1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_RSV_2CHAR_1__c</fullName>
        <label>FCU001P_RSV_2CHAR_1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_RSV_4CHAR_1__c</fullName>
        <label>FCU001P_RSV_4CHAR_1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_SHIPTO_STS__c</fullName>
        <label>FCU001P_SHIPTO_STS</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_SHIP_TO_YN__c</fullName>
        <label>FCU001P_SHIP_TO_YN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_STATE__c</fullName>
        <label>FCU001P_STATE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_STOP_NBR__c</fullName>
        <label>FCU001P_STOP_NBR</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_STREET_ADDRESS1__c</fullName>
        <label>FCU001P_STREET_ADDRESS1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_STREET_ADDRESS2__c</fullName>
        <label>FCU001P_STREET_ADDRESS2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_TIME_STAMP__c</fullName>
        <label>FCU001P_TIME_STAMP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU001P_ZIP__c</fullName>
        <label>FCU001P_ZIP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Attempts__c</fullName>
        <label>Number Of Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Status_Message__c</fullName>
        <externalId>true</externalId>
        <label>Sync Status Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Record_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique Record ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>AOPS Address Master</label>
    <nameField>
        <label>AOPS Address Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AOPS Address Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>